--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,35 @@
-h1 {
-    font-size: 56px;
-    color: aqua;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body {
-    background: lighten(black, 10);
+    background: #161b22;
+    color: #ecf2f8;
+    font-family: sans-serif;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.main {
+    h1 {
+        font-size: 64px;
+        margin-bottom: 6px;
+    }
+    h3 {
+        font-size: 25px;
+    }
+    a {
+        background-color: #7ce38b;
+        border: darken(#7ce38b, 20) 3px solid;
+        padding: 3px 7px;
+        color: #ecf2f8;
+        border-radius: 16px;
+        text-decoration: none;
+        &:hover {
+            background-color: darken(#7ce38b, 7);
+        }
+    }
 }
