--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,8 @@ body {
     justify-content: center;
 }
 .main {
+    padding: 20px;
+    
     h1 {
         font-size: 64px;
         margin-bottom: 6px;
